2008-04-07  Sven Herzberg  <sven@imendio.com>

	Prepares: NB#78896: libhildon code inspection/coverity: uninitialised
	local values in hildon_date_editor_size_allocate

	* src/hildon-date-editor.c: merged the two if() branches together

2008-04-07  Sven Herzberg  <sven@imendio.com>

	Prepares: NB#78896: libhildon code inspection/coverity: uninitialised
	local values in hildon_date_editor_size_allocate

	* src/hildon-date-editor.c: changed the arguments of the if()
	conditions

2008-04-07  Sven Herzberg  <sven@imendio.com>

	Prepares: NB#78896: libhildon code inspection/coverity: uninitialised
	local values in hildon_date_editor_size_allocate

	* src/hildon-date-editor.c: split the calculation of the allocation
	from the real allocation

2008-03-27  Michael Natterer  <mitch@imendio.com>

	Fixes: NB#81696: The passcode is not overwritten even after
	selecting

	* src/hildon-code-dialog.c
	(hildon_code_dialog_button_clicked)
	(hildon_code_dialog_im_commit): don't use gtk_entry_append_text()
	because that doesn't overwrite selected text. Instead, emit the
	"commit" signal on the entry's im_context so the entry's normal
	insert logic is triggered. Set the cursor to the end of the entry
	after each insert operation so that we *only* insert in the middle
	of the text if something was selected.

2008-03-27  Michael Natterer  <mitch@imendio.com>

	Enable fixing: NB#79916 and NB#79918: The help topic for Color
	selector cannot be opened

	* src/hildon-color-button.c: add signal "setup-dialog" and emit it
	when the popup color selector is created. Please connect to this
	signal in order to set the dialog's help ID.

2008-03-25  Sven Herzberg  <sven@imendio.com>

	Fixes: MB#1212: Hide info banners (infoprints) on click

	* src/hildon-banner.c: (simulate_close), (hildon_banner_timeout):
	extracted the close event simulation into an extra function
	(hildon_banner_button_press_event): simulate a close event and destroy
	the widget if the event wasn't handled